internal/xds/translator/testdata/out/xds-ir/backend-with-mixed-auto-sni.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        prefix: /
      name: mixed-auto-sni-route
      route:
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
        upgradeConfigs:
        - upgradeType: websocket
        weightedClusters:
          clusters:
          - name: mixed-auto-sni-route-dest/backend/0
            weight: 1
          - name: mixed-auto-sni-route-dest/backend/1
            weight: 1
